# dragoncommander

./: install_libs.cmd
proto/: file.proto
service/: CMakeLists.txt  README.md  build.cmd
service/src/: CMakeLists.txt  exception.h  file.grpc.pb.cc  file.grpc.pb.h  file.pb.cc  file.pb.h  main.cpp  string_algorithms.h
service/src/file/: file.cpp  file.h
service/tests/: CMakeLists.txt
ui/: app.js  index.html  main.js  package.json
